# Raspi

./: .gitignore  README.md  adresa_ip.txt  adresa_mac.txt  chat.txt  descopera_adrese.py  devcontainer.json  ia_adresa_raspi.ps1  ip_script.ps  ip_scripts.ps1
UI/: __main__.py  (+1 more)
raspi/: Cargo.toml
raspi/src/: cod_PS.rs  config.toml  lib.rs  main.rs
raspi/src/chassis/: chassis_traits.rs  config.rs  esp.rs  id_identifier.sh  mod.rs  real_chassis.rs  serial_commands.rs  serial_communication-dummy.rs  serial_communication.rs  serial_responses.rs  simulated_chassis.rs
raspi/src/image_recognition/: detect_marker.py  electric_eye.rs  mod.rs  take_photo.py
raspi/src/map_storage/: mod.rs  route_storage.rs
raspi/src/master_controller/: master_controller.rs
raspi/src/mission_controller/: mission_controller.rs  missions.rs
raspi/src/navigation_computing/: mod.rs  nav_computer_states.rs  navigation_computer.rs
raspi/src/request_response/: requests.rs  responses.rs
raspi/src/utils/: logging.rs  mod.rs  stimulator_config.rs  store_route_helper.rs
raspi/tests/: map_storage_tests.rs  request_response_tests.rs  store_route_helper.rs
stimulator/: Cargo.toml
stimulator/src/: lib.rs  main.rs
stimulator/src/Request_Response/: requests.rs
stimulator/src/chassis/: chassis_traits.rs  mod.rs  simulated_chassis.rs
stimulator/src/image_recognition/: detect_marker.py  electric_eye.rs  image_processing.rs  mod.rs
stimulator/src/map_storage/: route_storage.rs
stimulator/src/master_controller/: master_controller.rs  mod.rs
stimulator/tests/: map_storage_tests.rs
(+27 files in other folders)
