[package]
name = "raspi"
version = "0.1.0"
edition = "2024"
default-run = "joc_cu_usb"

[dependencies]
tokio = { version = "1", features = ["full"] }
crossterm = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
toml = "0.9.4"
num-traits = "0.2.19"
num-derive = "0.4.2"
once_cell = "1.21.3"
pyo3 = { version = "0.25", features = ["auto-initialize"] }
serialport = "4.7.2"
event-listener = "5.4.1"
evdev = "0.13.1"
udev = "0.9"
