[package]
name = "stimulator"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
crossterm = "0.29.0"
num-traits = "0.2.19"
num-derive = "0.4.2"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.4"
pyo3 = { version = "0.22", features = ["auto-initialize"] }
